--- a/contato.html
+++ b/contato.html
@@ -15,8 +15,8 @@
         <ul>
             <li><a href="index.html">Página Inicial</a></li>
             <li><a href="materiais.html">Materiais</a></li>
-            <li><a href="">Práticas</a></li>
-            <li><a href="contato.html">Contato</a></li>
+            <li><a href="praticas.html">Práticas</a></li>
+            <li><a href="">Contato</a></li>
         </ul>
         <h2>Busque aqui</h2>
         <form action="/resultado-da-busca" method="get">
