--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Minha página</title>
 </head>
 
@@ -13,17 +14,19 @@
     </header>
     <nav>
         <ul>
-            <li><a href="index.html">Página Inicial</a></li>
+            <li><a href="">Página Inicial</a></li>
             <li><a href="materiais.html">Materiais</a></li>
-            <li><a href="">Práticas</a></li>
+            <li><a href="praticas.html">Práticas</a></li>
             <li><a href="contato.html">Contato</a></li>
         </ul>
-        <h2>Busque aqui</h2>
+    </nav>
+        
         <form action="/resultado-da-busca" method="get">
+            <label>Busque aqui</label>
             <input type="search" name="input" placeholder="Pesquisar..." required>
             <button type="submit">Buscar</button>
         </form>
-    </nav>
+    
 </body>
 
 </html>
