--- a/praticas.html
+++ b/praticas.html
@@ -8,9 +8,11 @@
 </head>
 
 <body>
+    
     <header>
         <h1>PRÁTICAS</h1>
     </header>
+    
     <nav>
         <ul>
             <li><a href="index.html">Página Inicial</a></li>
@@ -18,18 +20,18 @@
             <li><a href="">Práticas</a></li>
             <li><a href="contato.html">Contato</a></li>
         </ul>
-        <h2>Busque aqui</h2>
-        <form action="/resultado-da-busca" method="get">
-            <input type="search" name="input" placeholder="Pesquisar..." required>
-            <button type="submit">Buscar</button>
-        </form>
     </nav>
-    <section></section>
-    <article></article>
-    <aside></aside>
+
+    <main>
+        <section></section>
+        <article></article>
+        <aside></aside>
+    </main>
+
     <footer>
         <p>All rights reserved</p>
     </footer>
+
 </body>
 
 </html>
